--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<title>Khaled Assaf</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-		
 	</head>
 	<body>
 		<nav>
@@ -18,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Khaled Assaf</h1>
-				<p>Adventures in software development, design and more<a href="/about">Read more about my life...</a></p>
+				<p>Adventures in software development, design and more</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
